# llm-redteam-sim

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
examples/: config.yaml
src/llm_redteam_sim/: checks.py  clients.py  report.py  run.py
src/llm_redteam_sim/attack_sets/: jailbreak_basic.txt  prompt_injection.txt  safety_selfharm.txt  safety_violence.txt
tests/: test_checks.py
