[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-redteam-sim"
version = "0.1.0"
description = "Lightweight LLM jailbreak & safety test harness"
authors = [{ name = "<your-name>", email = "<you@example.com>" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "openai>=1.40.0",
  "requests>=2.31.0",
  "pydantic>=2.7.0",
  "PyYAML>=6.0.1",
  "rich>=13.7.0",
  "tabulate>=0.9.0"
]

[project.scripts]
llm-redteam-sim = "llm_redteam_sim.run:main"

[tool.setuptools.packages.find]
where = ["src"]
